--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
-<mark>This website under Development, By Backend Technologies Private Limited</mark>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Under Construction</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        .card {
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            padding: 20px;
+            max-width: 400px;
+            width: 100%;
+        }
+
+        #construction-image {
+            width: 100%;
+            height: auto;
+            max-width: 300px;
+            margin: 20px 0;
+        }
+
+        #construction-text {
+            font-size: 18px;
+            color: #333;
+        }
+
+        #developer-info {
+            margin-top: 20px;
+            font-size: 16px;
+            color: #666;
+        }
+
+        #portfolio-link {
+            color: #007BFF;
+        }
+
+        #website-logo {
+            width: 50px;
+            height: 50px;
+            margin-top: 20px;
+        }
+
+        #portfolio-section {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="card">
+
+        <img id="construction-image" src="https://assets-v2.lottiefiles.com/a/d7e6170c-116d-11ee-b525-831e4e30131a/RFqBU56nES.gif" alt="Under Construction">
+
+        <div id="construction-text">
+            <p>This site is under construction</p>
+            <p>Developed by <strong>Backend Technologies Private Limited</strong></p>
+        </div>
+
+        <div id="developer-info">
+            <p>Developer: <strong>Himangshu Paul</strong></p>
+            <p>Owner: <strong>Abdus Samad</strong></p>
+            <p>Mobile: <strong>+91 95476 71067</strong></p>
+        </div>
+
+        <img id="website-logo" src="https://play-lh.googleusercontent.com/9DqI-7OD7e_66ul85JsxQRYE10uVZXN44JRG72sU1H76ZPZVbMx-SdaQqbO25bPCaA=w240-h480-rw" alt="Website Logo">
+
+        <div id="portfolio-section">
+            <p>Developer Portfolio: <a id="portfolio-link" href="https://himangshu.site" target="_blank">himangshu.site</a></p>
+        </div>
+
+    </div>
+
+</body>
+</html>
