--- a/index.html
+++ b/index.html
@@ -86,3 +86,7 @@
 
 </body>
 </html>
+
+
+
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="0ddef963-7f2e-4540-82bf-805fb9dece80";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
