--- a/privacy.html
+++ b/privacy.html
@@ -27,6 +27,11 @@
             border-radius: 50%;
         }
 
+        header h1 {
+            margin-top: 10px;
+            color: #fff; /* Text color set to white */
+        }
+
         main {
             max-width: 800px;
             margin: 20px auto;
@@ -83,7 +88,7 @@
         <p>Any changes to our Privacy Policy will be placed here and will supersede this version of our policy. We will take reasonable steps to draw your attention to any changes in our policy. However, to be on the safe side, we suggest that you read this document each time you use the website to ensure that it still meets with your approval.</p>
 
         <h3>Contacting Us</h3>
-        <p>If you have any questions about our Privacy Policy, or if you want to know what information we have collected about you, please email us at <a href="mailto:gameshop.office@gmail.com">gameshop.office@gmail.com</a> or call us at <strong>+91 95476 71067</strong>. You can also correct any factual errors in that information or require us to remove your details from any list under our control.</p>
+        <p>If you have any questions about our Privacy Policy, or if you want to know what information we have collected about you, please email us at <a href="mailto:born2earn1995@gmail.com">born2earn1995@gmail.com</a> or call us at <strong>+91 95476 71067</strong>. You can also correct any factual errors in that information or require us to remove your details from any list under our control.</p>
     </main>
 
     <footer>
@@ -93,3 +98,6 @@
 </body>
 </html>
 
+
+
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="0ddef963-7f2e-4540-82bf-805fb9dece80";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
