--- a/index.html
+++ b/index.html
@@ -2193,31 +2193,31 @@
 							<li>
 								<a href="https://www.facebook.com/" target="_blank">
 									<span class="screen-reader-text">Facebook</span>
-									<i class="fa fa-facebook" style="font-size:16px;color:#FFFFFF"></i>
+									<i class="fa fa-facebook" style="font-size:24px;color:#FFFFFF"></i>
 								</a>
 							</li>
 							<li>
 								<a href="http://wa.me/+919933525757" target="_blank">
 									<span class="screen-reader-text">WhatsApp</span>
-									<i class="fa fa-whatsapp" style="font-size:16px;color:#FFFFFF"></i>
+									<i class="fa fa-whatsapp" style="font-size:24px;color:#FFFFFF"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://www.instagram.com/born2earn_" target="_blank">
 									<span class="screen-reader-text">Instagram</span>
-									<i class="fa fa-instagram" style="font-size:16px;color:#FFFFFF"></i>
+									<i class="fa fa-instagram" style="font-size:24px;color:#FFFFFF"></i>
 								</a>
 							</li>
 							<li>
-								<a href="https://youtube.com/@NewGamerRaaz" target="_blank">
+								<a href="https://youtube.com/@B2ERaaz" target="_blank">
 									<span class="screen-reader-text">Youtube</span>
-									<i class="fa fa-youtube" style="font-size:16px;color:#FFFFFF"></i>
+									<i class="fa fa-youtube" style="font-size:24px;color:#FFFFFF"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://t.me/Born2EarnGame" target="_blank">
 									<span class="screen-reader-text">Telegram</span>
-									<i class="fa fa-telegram" style="font-size:16px;color:#FFFFFF"></i>
+									<i class="fa fa-telegram" style="font-size:24px;color:#FFFFFF"></i>
 								</a>
 							</li>
 						</ul>
