--- a/index.html
+++ b/index.html
@@ -2211,7 +2211,7 @@
 							<li>
 								<a href="https://youtube.com/@B2ERaaz" target="_blank">
 									<span class="screen-reader-text">Youtube</span>
-									<i class="fa fa-youtube" style="font-size:24px;color:#FFFFFF"></i>
+									<i class="fa fa-youtube-play" style="font-size:24px;color:#FFFFFF"></i>
 								</a>
 							</li>
 							<li>
