--- a/dev.html
+++ b/dev.html
@@ -1,1 +1,70 @@
+<!DOCTYPE html>
+<html>
+<head>
 
+
+  <title>Developer Profile - Himangshu</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
+}
+</style>
+</head>
+<body>
+
+<h2 style="text-align:center">Developer Profile</h2>
+
+<div class="card">
+  <img src="https://html-generator.com/uploads/images/2023/12/27/12232VK4R1X05KE.jpg" alt="John" style="width:100%">
+  <h1>Hiamngshu Paul</h1>
+  <p class="title">Android Dev | Graphic Designer</p>
+  <p>Inspiria Knowledge Campus</p>
+  <div style="margin: 24px 0;">
+    <a href="https://github.com/devhimangshu" style="margin-right: 10px;"><i class="fa fa-github"></i></a>
+    <a href="https://www.instagram.com/iam.backend/" style="margin-right: 10px;"><i class="fa fa-instagram"></i></a>
+    <a href="https://www.linkedin.com/in/himangshupaul/"><i class="fa fa-linkedin"></i></a>
+</div>
+
+      <p><a href="https://himangshu.site"><button>Visit Portfolio</button></a></p>
+    </div>
+
+</body>
+</html>
+
+
+
+
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="4d308455-1fae-4e20-8e1c-3f89b7b1b1dd";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
