--- a/index.html
+++ b/index.html
@@ -2060,7 +2060,7 @@
 						</div>
 						<div class="mockup-container">
 							<div class="mockup-bg">
-								<img src="https://html-generator.com/uploads/images/2023/12/31/344151FN67MUZFT.jpg" alt="iPhone illustration">
+								<img src="https://html-generator.com/uploads/images/2023/12/31/29184A58I_Z7LLZ.png" alt="iPhone illustration">
 							</div>
 							<img class="device-mockup" src="https://html-generator.com/uploads/images/2023/12/27/02817DJ9RJKMDJQ.png" alt="iPhone Hero">
 						</div>
@@ -2076,9 +2076,9 @@
 							<div class="feature-extended">
 								<div class="feature-extended-image">
 									<div class="mockup-bg">
-										<img src="https://html-generator.com/uploads/images/2023/12/31/344151FN67MUZFT.jpg" alt="iPhone Feature 01 illustration">
+										<img src="https://html-generator.com/uploads/images/2023/12/31/29184A58I_Z7LLZ.png" alt="iPhone Feature 01 illustration">
 									</div>
-										<img src="https://html-generator.com/uploads/images/2023/12/31/344151FN67MUZFT.jpg" alt="iPhone Feature 03 illustration">
+										<img src="https://html-generator.com/uploads/images/2023/12/31/29184A58I_Z7LLZ.png" alt="iPhone Feature 03 illustration">
 									<img class="device-mockup is-revealing" src="https://www.pngmart.com/files/22/Garena-Free-Fire-PNG-Pic.png" alt="iPhone Feature 01">
 								</div>
 								<div class="feature-extended-body is-revealing">
@@ -2089,10 +2089,10 @@
 							<div class="feature-extended">
 								<div class="feature-extended-image">
 									<div class="mockup-bg">
-										<img src="https://html-generator.com/uploads/images/2023/12/31/344151FN67MUZFT.jpg" alt="iPhone Feature 03 illustration">
-										<img src="https://html-generator.com/uploads/images/2023/12/31/344151FN67MUZFT.jpg" alt="iPhone Feature 02 illustration">
+										<img src="https://html-generator.com/uploads/images/2023/12/31/29184A58I_Z7LLZ.png" alt="iPhone Feature 03 illustration">
+										<img src="https://html-generator.com/uploads/images/2023/12/31/29184A58I_Z7LLZ.png" alt="iPhone Feature 02 illustration">
 									</div>
-										<img src="https://html-generator.com/uploads/images/2023/12/31/344151FN67MUZFT.jpg" alt="iPhone Feature 03 illustration">
+										<img src="https://html-generator.com/uploads/images/2023/12/31/29184A58I_Z7LLZ.png" alt="iPhone Feature 03 illustration">
                                         <img class="device-mockup is-revealing" src="https://totalpng.com//public/uploads/preview/pubg-character-png-transparent-picture-11669375346hym6nwpbkz.png" alt="iPhone Feature 02">
 								</div>
 								<div class="feature-extended-body is-revealing">
@@ -2103,7 +2103,7 @@
 							<div class="feature-extended">
 								<div class="feature-extended-image">
 									<div class="mockup-bg">
-										<img src="https://html-generator.com/uploads/images/2023/12/31/344151FN67MUZFT.jpg" alt="iPhone Feature 03 illustration">
+										<img src="https://html-generator.com/uploads/images/2023/12/31/29184A58I_Z7LLZ.png" alt="iPhone Feature 03 illustration">
 									</div>
 									<img class="device-mockup is-revealing" src="https://freepngimg.com/thumb/call_of_duty/11-2-call-of-duty-png-clipart.png" alt="iPhone Feature 03">
 								</div>
@@ -2115,7 +2115,7 @@
 							<div class="feature-extended">
 								<div class="feature-extended-image">
 									<div class="mockup-bg">
-										<img src="https://html-generator.com/uploads/images/2023/12/31/344151FN67MUZFT.jpg" alt="iPhone Feature 04 illustration">
+										<img src="https://html-generator.com/uploads/images/2023/12/31/29184A58I_Z7LLZ.png" alt="iPhone Feature 04 illustration">
 									</div>
 									<img class="device-mockup is-revealing" src="https://html-generator.com/uploads/images/2023/12/27/81701PHYA6U__NX.png" alt="iPhone Feature 04">
 								</div>
@@ -2128,7 +2128,7 @@
                             <div class="feature-extended">
 								<div class="feature-extended-image">
 									<div class="mockup-bg">
-										<img src="https://html-generator.com/uploads/images/2023/12/31/344151FN67MUZFT.jpg" alt="iPhone Feature 03 illustration">
+										<img src="https://html-generator.com/uploads/images/2023/12/31/29184A58I_Z7LLZ.png" alt="iPhone Feature 03 illustration">
 									</div>
 									<img class="device-mockup is-revealing" src="https://freepngimg.com/thumb/clash_of_clans/27792-8-clash-of-clans-image.png" alt="iPhone Feature 03">
 								</div>
