--- a/privacy.html
+++ b/privacy.html
@@ -278,7 +278,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Logo" class="logo">
+        <img src="https://play-lh.googleusercontent.com/9DqI-7OD7e_66ul85JsxQRYE10uVZXN44JRG72sU1H76ZPZVbMx-SdaQqbO25bPCaA=w240-h480-rw" alt="Logo" class="logo">
         <h1>Born2Earn Game Shop</h1>
     </header>
 
@@ -365,7 +365,7 @@
     <div class="scroll-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">↑</div>
 
     <footer>
-        © 2023 Born2Earn Game Shop. All rights reserved.
+        © 2025 Born2Earn Game Shop. All rights reserved.
     </footer>
 
     <script>
