--- a/privacy.html
+++ b/privacy.html
@@ -278,7 +278,7 @@
 </head>
 <body>
     <header>
-        <img src="https://play-lh.googleusercontent.com/9DqI-7OD7e_66ul85JsxQRYE10uVZXN44JRG72sU1H76ZPZVbMx-SdaQqbO25bPCaA=w240-h480-rw" alt="Logo" class="logo">
+        <img src="https://html-generator.com/uploads/images/2023/12/27/45399_DPAH6LHQC.png" alt="Logo" class="logo">
         <h1>Born2Earn Game Shop</h1>
     </header>
 
